<?xml version="1.0"?>
<package>
  <name>monarch_situational_awareness</name>
  <version>0.4.1</version>
  <description>This package contains the Situational Awareness Module (SAM) implementation</description>

  <maintainer email="jmessias@isr.ist.utl.pt">Joao Messias</maintainer>
  <author email="jmessias@isr.ist.utl.pt">Joao Messias</author> -->

    <license>LGPLv3</license>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>